[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/hud/v2/InventoryHandle.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/v2/InventoryDrawer.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/v3/drawer_handle_hover.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/v3/EndTile.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/hud/v3/drawer_background_narrow_thick.png" type="Texture" id=5]
[ext_resource path="res://ui/hud/v3/DrawerCorner.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/hud/v3/drawer_interior_shade.png" type="Texture" id=7]
[ext_resource path="res://ui/hud/v3/drawer_handle_default.png" type="Texture" id=8]
[ext_resource path="res://ui/hud/v3/StartShade.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/hud/v3/DrawerInsert.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/hud/v3/InsertTile.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/hud/v3/DrawerSounds.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/hud/v3/drawer_background_narrow_thin.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 117, 11 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.5
bounce = 0.2

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 49, 5 )

[node name="InventoryDrawer" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="DrawerLimit" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawerLimit"]
position = Vector2( 4, 145 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="InteriorTile" type="Sprite" parent="."]
position = Vector2( 0, 34 )
rotation = 1.57079
scale = Vector2( 1, 606.077 )
texture = ExtResource( 5 )
centered = false

[node name="InteriorTile2" type="Sprite" parent="."]
position = Vector2( 0, 34 )
rotation = 1.57079
scale = Vector2( 1, 34.6127 )
texture = ExtResource( 13 )
centered = false

[node name="InteriorShade" type="Sprite" parent="."]
position = Vector2( 9.99988, 135.048 )
rotation = 1.57079
scale = Vector2( 96.0005, 1 )
texture = ExtResource( 7 )

[node name="Insert1" parent="." instance=ExtResource( 10 )]
position = Vector2( -18, 33 )

[node name="Insert2" parent="." instance=ExtResource( 10 )]
position = Vector2( -18, 237 )
scale = Vector2( -1, 1 )

[node name="Insert3" parent="." instance=ExtResource( 10 )]
position = Vector2( -230, 237 )
scale = Vector2( -1, 1 )
animation = "thick"

[node name="Insert4" parent="." instance=ExtResource( 10 )]
position = Vector2( -230, 33 )
animation = "thick"

[node name="StartShade" parent="." instance=ExtResource( 9 )]
position = Vector2( 2, 37 )
rotation = 1.57079

[node name="StartShade2" parent="." instance=ExtResource( 9 )]
position = Vector2( 2, 234 )
rotation = 1.57079

[node name="Corner1" parent="." instance=ExtResource( 6 )]
position = Vector2( 19, 33 )

[node name="Corner2" parent="." instance=ExtResource( 6 )]
position = Vector2( 19, 237 )
scale = Vector2( -1, 1 )

[node name="EndTile" parent="." instance=ExtResource( 4 )]
position = Vector2( 19, 40.7593 )
scale = Vector2( 94.1508, 1 )

[node name="InsertTile" parent="." instance=ExtResource( 11 )]
position = Vector2( -18, 45 )
scale = Vector2( 90.0474, 1 )
animation = "thin"

[node name="InsertTile2" parent="." instance=ExtResource( 11 )]
position = Vector2( -230, 45 )
scale = Vector2( 90.0474, 1 )

[node name="InventoryHandle" type="RigidBody2D" parent="."]
position = Vector2( 26, -103 )
rotation = 1.57079
input_pickable = true
collision_layer = 8
collision_mask = 8
mode = 2
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HandleSprite" type="TextureButton" parent="InventoryHandle"]
margin_left = 190.0
margin_right = 291.0
margin_bottom = 18.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryHandle"]
visible = false
position = Vector2( 240, 6 )
shape = SubResource( 3 )

[node name="DrawerSounds" parent="InventoryHandle" instance=ExtResource( 12 )]

[node name="Start" type="Position2D" parent="."]
position = Vector2( 25, 270 )
__meta__ = {
"_edit_lock_": true
}

[node name="End" type="Position2D" parent="."]
position = Vector2( 432, 270 )
rotation = 1.57079
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="InventoryHandle" to="InventoryHandle" method="_on_InventoryHandle_body_entered"]
[connection signal="button_down" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_button_down"]
[connection signal="button_up" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_button_up"]
[connection signal="mouse_entered" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_mouse_entered"]
[connection signal="mouse_exited" from="InventoryHandle/HandleSprite" to="InventoryHandle" method="_on_HandleSprite_mouse_exited"]
